--- a/Diploma/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/Diploma/ClientApp/app/components/navmenu/navmenu.component.html
@@ -7,29 +7,24 @@
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' [routerLink]="['/home']">Diploma</a>
+            <a class='navbar-brand' [routerLink]="['/home']">ИИС о состоянии атмосферы в Калининградской области</a>
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse'>
             <ul class='nav navbar-nav'>
                 <li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/home']">
-                        <span class='glyphicon glyphicon-home'></span> Home
-                    </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/counter']">
-                        <span class='glyphicon glyphicon-education'></span> Counter
+                        <span class='glyphicon glyphicon-home'></span> Главная
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/fetch-data']">
-                        <span class='glyphicon glyphicon-th-list'></span> Fetch data
+                        <span class='glyphicon glyphicon-th-list'></span> Прогноз уровня загрязнения
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/map']">
-                        <span class='glyphicon glyphicon-th-list'></span> Map
+                        <span class='glyphicon glyphicon-th-list'></span> Карта области
                     </a>
                 </li>
             </ul>
