--- a/Diploma/ClientApp/app/components/map/map.component.css
+++ b/Diploma/ClientApp/app/components/map/map.component.css
@@ -1,3 +1,53 @@
-.map {
-    height: 800px;
+agm-map {
+  height: 800px;
+}
+
+.custom-marker {
+  width: 35px;
+  height: 35px;
+}
+
+.custom-marker svg {
+  width: 100%;
+  height: 100%;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  font-size: 26px;
+    font-weight: 500;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+.desc {
+  text-align: center;
+    display: flex;
+    justify-content: center;
+    max-width: 200px;
+    padding: 5px 0px;
+}
+
+.main {
+  display: flex;
+  font-size: 14px;
+  font-weight: 400;
+  padding: 5px 0px;
+}
+
+.main .column {
+  width: 50%;
+  padding: 0 5px;
+}
+
+.main .column .custom-row {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 0px;
+}
+
+.main .column .custom-row .aqi-value {
+  display: flex;
+  justify-content: space-between; 
+  width: 60px;
 }
